...
                    maxLines: 2,
                    controller: diaryViewModel.titleTextCtrl,
                    cursorColor: kPrimaryColor,
                    style: TextStyle(color: kPrimaryColor, fontSize: 18.sp, fontWeight: FontWeight.bold),
                    decoration: InputDecoration(
                      border: InputBorder.none,
                      hintText: "What's out topic of discussion?",
                      hintStyle: TextStyle(color: kPrimaryDarkColorTrasparent, fontSize: 18.sp, fontWeight: FontWeight.bold),
                    ),
                    inputFormatters: [LengthLimitingTextInputFormatter(50)],
                  ),
                  Divider(color: kPrimaryDarkColorTrasparent, height: 5, thickness: 0.5),
                  // Diary Page Content
...
                          controller: diaryViewModel.contentTextCtrl,
                          cursorColor: kPrimaryColor,
                          style: TextStyle(color: kPrimaryColor, fontSize: 15.sp),
                          keyboardType: TextInputType.multiline,
                          maxLines: null,
                          decoration: InputDecoration.collapsed(
                            hintText: "Tell me something about it...",
                            hintStyle: TextStyle(color: kPrimaryDarkColorTrasparent, fontSize: 15.sp),
                          ),
                        ),
                      ),
                    ),
                  ),
...
