...
                                    onTap();
                                  }
                                  Navigator.of(context, rootNavigator: true).pop();
                                  BackButtonInterceptor.remove(backButtonInterceptor);
                                },
                                child: buttonType == ButtonType.ok
                                    ? Text("OK", style: TextStyle(color: kPrimaryMediumColor, fontSize: 14.sp, fontWeight: FontWeight.bold))
                                    : Text("Confirm", style: TextStyle(color: kPrimaryMediumColor, fontSize: 14.sp, fontWeight: FontWeight.bold))),
                          ),
                        ],
                      ),
                    ],
                  ),
...
