...
      } else {
        _authMessage.add("The email is not verified");
      }
    } catch (e) {
      _isUserLogged.add(false);
      if (e.code == 'user-not-found' || e.code == 'wrong-password')
        _authMessage.add("Wrong email or password.");
    }
  }

  Future logInWithGoogle() async {
    try {
      await auth.signInWithGoogle();
...
