...
                textCapitalization: TextCapitalization.sentences,
                textAlignVertical: TextAlignVertical.top,
                maxLines: 5,
                minLines: 1,
                controller: chatViewModel.contentTextCtrl,
                decoration: InputDecoration(
                  hintText: "Type your message...",
                  hintStyle: TextStyle(fontSize: 13.5.sp),
                  fillColor: kPrimaryColor,
                  border: InputBorder.none,
                ),
              ),
            ),
...
