...
                    keyboardType: TextInputType.text,
                    textInputAction: TextInputAction.go,
                    controller: txt,
                    decoration: InputDecoration(
                        fillColor: kPrimaryColor,
                        border: InputBorder.none,
                        hintText: "Search place",
                        suffixIcon: Icon(
                          Icons.search,
                          color: kPrimaryColor,
                        )),
                    onChanged: (value) =>
                        widget.mapViewModel.searchPlaces(value),
...
